fix homepage url

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Richard B. Porter",
-            "homepage": "richardbporter.com"
+            "homepage": "http://www.richardbporter.com"
         }
     ],
     "require": {
