--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,18 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=5.6.0",
+        "composer/installers": "^1.4"
+    },
+    "require-dev": {
+        "drush/drush": "master",
+        "phpunit/phpunit": "~5"
+    },
+    "autoload-dev": {
+        "psr-4": {
+          "DrushUsersCommands\\Tests\\": "tests/",
+          "Unish\\": "vendor/drush/drush/tests/"
+        }
     },
     "extra": {
         "drush": {
