allow dev stability, prefer stable, sort packages

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,8 @@
                 "drush.services.yml": "^9"
             }
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "sort-packages": true
 }
