--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "require-dev": {
         "drush/drush": "master",
-        "phpunit/phpunit": "~5"
+        "phpunit/phpunit": "~5",
+        "squizlabs/php_codesniffer": "~3"
     },
     "autoload-dev": {
         "psr-4": {
