fix phpcs bin path

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - composer install --no-suggest
 
   # Ignore warnings on exit.
-  - phpcs --config-set ignore_warnings_on_exit 1
+  - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
 
 
 script:
