--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - composer self-update
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - composer g require drush/drush-launcher
+  - which drush
 
 install:
   - composer install --no-suggest
