--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,12 @@ before_install:
   - composer self-update
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - composer g require drush/drush-launcher
-  - which drush
 
 install:
   - composer install --no-suggest
+  - composer install --working-dir vendor/drush/drush
+  - cd vendor/drush/drush && php vendor/drush/drush/unish.sut.php
+  - cd $TRAVIS_BUILD_DIR
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
 
 script:
