--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 install:
   - composer install --no-suggest
   - composer install --working-dir vendor/drush/drush
-  - cd vendor/drush/drush && php vendor/drush/drush/unish.sut.php
+  - cd vendor/drush/drush && php unish.sut.php
   - cd $TRAVIS_BUILD_DIR
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
 
