--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "composer/installers": "^1.4"
     },
     "require-dev": {
-        "drush/drush": "master",
+        "drush/drush": "dev-master",
         "phpunit/phpunit": "~5",
         "squizlabs/php_codesniffer": "~3"
     },
