change service name in drush.services.yml

--- a/drush.services.yml
+++ b/drush.services.yml
@@ -1,5 +1,5 @@
 services:
-  user_list.commands:
+  drush-users-commands.commands:
     class: \Drupal\drush-users-commands\Commands\UsersCommands
     tags:
       - { name: drush.command }
