--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "richardbporter/drush-users-commands",
     "description": "Drush commands to interact with multiple Drupal users.",
     "type": "drupal-drush",
+    "keywords": ["drush", "drupal", "user-list", "list-users"],
     "authors": [
         {
             "name": "Richard B. Porter",
