--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "composer/installers": "^1.4"
     },
     "require-dev": {
-        "drush/drush": "dev-master",
+        "drush/drush": "~9",
         "phpunit/phpunit": "~5",
         "squizlabs/php_codesniffer": "~3"
     },
