--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": "^7",
         "composer/installers": "^1.4"
     },
     "require-dev": {
-        "drush/drush": "~9",
+        "drush/drush": "~9.4",
         "phpunit/phpunit": "~5",
         "squizlabs/php_codesniffer": "~3"
     },
