--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": "^7",
-        "composer/installers": "^1.4"
+        "composer/installers": "^1.4",
+        "drush/drush": "^9.4"
     },
     "require-dev": {
-        "drush/drush": "~9.4",
         "phpunit/phpunit": "~5",
         "squizlabs/php_codesniffer": "~3"
     },
