--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_install:
 
 install:
   - composer install --no-suggest
-  - ./vendor/drush/drush/unish.sut.php
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
-  - ln -s ../ Commands
+  - ./vendor/drush/drush/unish.sut.php
+  - ./vendor/tests/sut.cp.php
 
 script:
   - ./vendor/bin/phpcs --standard=PSR2 . --ignore='vendor,tests/coverage'
