--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - composer install --no-suggest
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
   - ./vendor/drush/drush/unish.sut.php
-  - ./vendor/tests/sut.cp.php
+  - ./tests/sut.cp.php
 
 script:
   - ./vendor/bin/phpcs --standard=PSR2 . --ignore='vendor,tests/coverage'
