--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^7",
         "composer/installers": "^1.4",
-        "drush/drush": "^9.4"
+        "drush/drush": "^9.4 || ^10.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~5",
