--- a/composer.json
+++ b/composer.json
@@ -6,31 +6,54 @@
     "authors": [
         {
             "name": "Richard B. Porter",
-            "homepage": "http://www.richardbporter.com"
+            "homepage": "https://richardbporter.github.io"
         }
     ],
     "require": {
         "php": "^7",
         "composer/installers": "^1.4",
-        "drush/drush": "^9.4 || ^10.2"
+        "drush/drush": "^9.6 || ^10.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5",
-        "squizlabs/php_codesniffer": "~3"
+        "phpunit/phpunit": "^6.1",
+        "squizlabs/php_codesniffer": "^3",
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "autoload-dev": {
         "psr-4": {
           "UsersCommands\\Tests\\": "tests/",
-          "Unish\\": "vendor/drush/drush/tests/"
+          "Unish\\": "vendor/drush/drush/tests/unish"
         }
     },
     "extra": {
         "drush": {
             "services": {
-                "drush.services.yml": "^9.4"
+                "drush.services.yml": "^9.6 || ^10.2"
             }
         },
-        "installer-name": "UsersCommands"
+        "installer-name": "UsersCommands",
+        "merge-plugin": {
+            "include": [
+                "vendor/drush/drush/composer.json"
+            ],
+            "recurse": false,
+            "replace": false,
+            "ignore-duplicates": false,
+            "merge-dev": true,
+            "merge-extra": false,
+            "merge-extra-deep": false,
+            "merge-scripts": false
+        },
+        "installer-paths": {
+            "vendor/drush/drush/sut/core": ["type:drupal-core"],
+            "vendor/drush/drush/sut/libraries/{$name}": ["type:drupal-library"],
+            "vendor/drush/drush/sut/modules/unish/{$name}": ["drupal/devel"],
+            "vendor/drush/drush/sut/themes/unish/{$name}": ["drupal/empty_theme"],
+            "vendor/drush/drush/sut/modules/contrib/{$name}": ["type:drupal-module"],
+            "vendor/drush/drush/sut/profiles/contrib/{$name}": ["type:drupal-profile"],
+            "vendor/drush/drush/sut/themes/contrib/{$name}": ["type:drupal-theme"],
+            "vendor/drush/drush/sut/drush/contrib/{$name}": ["type:drupal-drush"]
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
