--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,60 @@
 {
-    "name": "richardbporter/drush-users-commands",
-    "description": "Drush commands to interact with multiple Drupal users.",
-    "type": "drupal-drush",
-    "keywords": ["drush", "drupal", "user-list", "list-users"],
-    "authors": [
-        {
-            "name": "Richard B. Porter",
-            "homepage": "http://www.richardbporter.com"
-        }
-    ],
-    "require": {
-        "php": "^7",
-        "composer/installers": "^1.4",
-        "drush/drush": "^9.4"
+  "name": "richardbporter/drush-users-commands",
+  "description": "Drush commands to interact with multiple Drupal users.",
+  "type": "drupal-drush",
+  "keywords": ["drush", "drupal", "user-list", "list-users"],
+  "authors": [
+    {
+      "name": "Richard B. Porter",
+      "homepage": "https://richardbporter.github.io"
+    }
+  ],
+  "require": {
+    "php": "^7",
+    "composer/installers": "^1.4",
+    "drush/drush": "^9.6 || ^10.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.1",
+    "squizlabs/php_codesniffer": "^3",
+    "wikimedia/composer-merge-plugin": "^1.4"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "UsersCommands\\Tests\\": "tests/",
+      "Unish\\": "vendor/drush/drush/tests/unish"
+    }
+  },
+  "extra": {
+    "drush": {
+      "services": {
+        "drush.services.yml": "^9.6"
+      }
     },
-    "require-dev": {
-        "phpunit/phpunit": "~5",
-        "squizlabs/php_codesniffer": "~3"
+    "installer-name": "UsersCommands",
+    "merge-plugin": {
+      "include": [
+        "vendor/drush/drush/composer.json"
+      ],
+      "recurse": false,
+      "replace": false,
+      "ignore-duplicates": false,
+      "merge-dev": true,
+      "merge-extra": false,
+      "merge-extra-deep": false,
+      "merge-scripts": false
     },
-    "autoload-dev": {
-        "psr-4": {
-          "UsersCommands\\Tests\\": "tests/",
-          "Unish\\": "vendor/drush/drush/tests/"
-        }
-    },
-    "extra": {
-        "drush": {
-            "services": {
-                "drush.services.yml": "^9.4"
-            }
-        },
-        "installer-name": "UsersCommands"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "installer-paths": {
+      "vendor/drush/drush/sut/core": ["type:drupal-core"],
+      "vendor/drush/drush/sut/libraries/{$name}": ["type:drupal-library"],
+      "vendor/drush/drush/sut/modules/unish/{$name}": ["drupal/devel"],
+      "vendor/drush/drush/sut/themes/unish/{$name}": ["drupal/empty_theme"],
+      "vendor/drush/drush/sut/modules/contrib/{$name}": ["type:drupal-module"],
+      "vendor/drush/drush/sut/profiles/contrib/{$name}": ["type:drupal-profile"],
+      "vendor/drush/drush/sut/themes/contrib/{$name}": ["type:drupal-theme"],
+      "vendor/drush/drush/sut/drush/contrib/{$name}": ["type:drupal-drush"]
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
