Disable Composer memory limit in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - cd Commands/UsersCommands
 
 install:
-  - composer install --no-suggest --prefer-source
+  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-suggest --prefer-source
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
 
 script:
