Remove no-suggests option from CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - cd Commands/UsersCommands
 
 install:
-  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-suggest --no-scripts --prefer-source
+  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --prefer-source
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
 
 script:
