Add `no-roles` option to `users:list` command. (#25)
* Add no-roles option, update param help text

* Add no-roles option test

* Update composer/installers, wikimedia/composer-merge-plugin and dependencies

* phpcs

* Fix indentation

* composer update

* Remove deprecated phpunit syntaxCheck attribute

* Remove deprecated blacklist filter option

* Update composer PHP req

* Add setUp :void return type

* Explode no-roles option

* Combine roles/no-roles validation and array conversion

* Remove no-suggests option from CI

* Fresh install

* phpcs

* Update

* Update drush services def in composer.json to 10.2

* Set first composer install exit code to true

* Lock

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,10 @@ before_install:
   - mv drush-users-commands/ Commands/UsersCommands
   - cd Commands/UsersCommands
 
+# The first composer install fails. Need to stop using merge plugin.
 install:
-  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-suggest --no-scripts --prefer-source
+  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --prefer-source || true
+  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --prefer-source
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
 
 script:
