--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": "^7.3",
     "composer/installers": "^1.11",
-    "drush/drush": "^9.6 || ^10.2"
+    "drush/drush": "^11.0.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5",
@@ -28,7 +28,7 @@
   "extra": {
     "drush": {
       "services": {
-        "drush.services.yml": "^10.2"
+        "drush.services.yml": "^11.0.5"
       }
     },
     "installer-name": "UsersCommands",
