--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5",
-    "squizlabs/php_codesniffer": "^3"
+    "squizlabs/php_codesniffer": "^3",
+    "drupal/core-recommended": "^9.3",
+    "drupal/core-composer-scaffold": "^9.3"
   },
   "autoload-dev": {
     "psr-4": {
@@ -33,14 +35,19 @@
     },
     "installer-name": "UsersCommands",
     "installer-paths": {
-      "vendor/drush/drush/sut/core": ["type:drupal-core"],
-      "vendor/drush/drush/sut/libraries/{$name}": ["type:drupal-library"],
-      "vendor/drush/drush/sut/modules/unish/{$name}": ["drupal/devel"],
-      "vendor/drush/drush/sut/themes/unish/{$name}": ["drupal/empty_theme"],
-      "vendor/drush/drush/sut/modules/contrib/{$name}": ["type:drupal-module"],
-      "vendor/drush/drush/sut/profiles/contrib/{$name}": ["type:drupal-profile"],
-      "vendor/drush/drush/sut/themes/contrib/{$name}": ["type:drupal-theme"],
-      "vendor/drush/drush/sut/drush/contrib/{$name}": ["type:drupal-drush"]
+      "sut/core": ["type:drupal-core"],
+      "sut/libraries/{$name}": ["type:drupal-library"],
+      "sut/modules/unish/{$name}": ["drupal/devel"],
+      "sut/themes/unish/{$name}": ["drupal/empty_theme"],
+      "sut/modules/contrib/{$name}": ["type:drupal-module"],
+      "sut/profiles/contrib/{$name}": ["type:drupal-profile"],
+      "sut/themes/contrib/{$name}": ["type:drupal-theme"],
+      "sut/drush/contrib/{$name}": ["type:drupal-drush"]
+    },
+    "drupal-scaffold": {
+      "locations": {
+        "web-root": "./sut"
+      }
     }
   },
   "minimum-stability": "dev",
