--- a/composer.json
+++ b/composer.json
@@ -46,9 +46,20 @@
     "drupal-scaffold": {
       "locations": {
         "web-root": "./sut"
-      }
+      },
+      "file-mapping": {
+        "[project-root]/.gitattributes": false,
+        "[project-root]/.editorconfig": false
+      },
+      "gitignore": false
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true,
+      "drupal/core-composer-scaffold": true
+    }
+  }
 }
