Document drush.yml config

--- a/drush/drush.yml
+++ b/drush/drush.yml
@@ -1,3 +1,5 @@
+# Register the command in the SUT.
+# https://github.com/drush-ops/example-drush-extension
 drush:
   commands:
     '\Drush\Commands\UsersCommands\UsersCommands': '${env.cwd}/UsersCommands.php'
