Update dependencies, simplify and refactor tests. (#41)
* Remove wikimedia/composer-merge-plugin

* Require drush ^11

* Remove test autoloader sut replacement

* Ignore sut

* Simplify travis setup

* Require drupal scaffold dev

* Remove base test

* Add drush dir with config to find command in sut

* Run si after phpcs in CI

* Remove unish autoload-dev

* Disable some scaffold files, gitignore and allow plugins

* Refactor tests to work with DrushTestTrait

* Update chi-teck/drupal-code-generator, enlightn/security-checker

- Upgrading chi-teck/drupal-code-generator (2.4.1 => 2.5.0)
- Upgrading enlightn/security-checker (v1.9.0 => v1.10.0)

* Require PHP 7.4

* Remove composer cache, add drush cache in CI

* Fix phpcs command in CI

* phpcs

* Document drush.yml config

* Set test DB URL in env var

* Do initial install via travis.yml

* Add testing install profile arg, comment for now

* Uncomment CI si

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: false
 language: php
 
 php:
-  - '7.3'
+  - '7.4'
 
 cache:
   directories:
-    - $HOME/.composer/cache
+    - $HOME/.drush/cache
 
 matrix:
   fast_finish: true
@@ -17,16 +17,12 @@ services:
 
 before_install:
   - composer self-update
-  - cd .. && mkdir Commands
-  - mv drush-users-commands/ Commands/UsersCommands
-  - cd Commands/UsersCommands
 
-# The first composer install fails. Need to stop using merge plugin.
 install:
-  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --prefer-source || true
-  - COMPOSER_MEMORY_LIMIT=-1 composer install --no-scripts --prefer-source
+  - composer install --no-scripts
   - ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
+  - ./vendor/bin/drush site:install testing --root sut --db-url mysql://root@localhost/drupal --yes
 
 script:
-  - ./vendor/bin/phpcs --standard=PSR2 . --ignore='.scenarios.lock,vendor,tests/coverage'
+  - ./vendor/bin/phpcs --standard=PSR2 --ignore='sut,vendor' .
   - ./vendor/bin/phpunit
