--- a/composer.json
+++ b/composer.json
@@ -11,51 +11,55 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.4",
     "composer/installers": "^1.11",
-    "drush/drush": "^9.6 || ^10.2"
+    "drush/drush": "^11.0.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5",
     "squizlabs/php_codesniffer": "^3",
-    "wikimedia/composer-merge-plugin": "^2"
+    "drupal/core-recommended": "^9.3",
+    "drupal/core-composer-scaffold": "^9.3"
   },
   "autoload-dev": {
     "psr-4": {
-      "UsersCommands\\Tests\\": "tests/",
-      "Unish\\": "vendor/drush/drush/tests/unish"
+      "UsersCommands\\Tests\\": "tests/"
     }
   },
   "extra": {
     "drush": {
       "services": {
-        "drush.services.yml": "^10.2"
+        "drush.services.yml": "^11.0.5"
       }
     },
     "installer-name": "UsersCommands",
-    "merge-plugin": {
-      "include": [
-        "vendor/drush/drush/composer.json"
-      ],
-      "recurse": false,
-      "replace": false,
-      "ignore-duplicates": false,
-      "merge-dev": true,
-      "merge-extra": false,
-      "merge-extra-deep": false,
-      "merge-scripts": false
-    },
     "installer-paths": {
-      "vendor/drush/drush/sut/core": ["type:drupal-core"],
-      "vendor/drush/drush/sut/libraries/{$name}": ["type:drupal-library"],
-      "vendor/drush/drush/sut/modules/unish/{$name}": ["drupal/devel"],
-      "vendor/drush/drush/sut/themes/unish/{$name}": ["drupal/empty_theme"],
-      "vendor/drush/drush/sut/modules/contrib/{$name}": ["type:drupal-module"],
-      "vendor/drush/drush/sut/profiles/contrib/{$name}": ["type:drupal-profile"],
-      "vendor/drush/drush/sut/themes/contrib/{$name}": ["type:drupal-theme"],
-      "vendor/drush/drush/sut/drush/contrib/{$name}": ["type:drupal-drush"]
+      "sut/core": ["type:drupal-core"],
+      "sut/libraries/{$name}": ["type:drupal-library"],
+      "sut/modules/unish/{$name}": ["drupal/devel"],
+      "sut/themes/unish/{$name}": ["drupal/empty_theme"],
+      "sut/modules/contrib/{$name}": ["type:drupal-module"],
+      "sut/profiles/contrib/{$name}": ["type:drupal-profile"],
+      "sut/themes/contrib/{$name}": ["type:drupal-theme"],
+      "sut/drush/contrib/{$name}": ["type:drupal-drush"]
+    },
+    "drupal-scaffold": {
+      "locations": {
+        "web-root": "./sut"
+      },
+      "file-mapping": {
+        "[project-root]/.gitattributes": false,
+        "[project-root]/.editorconfig": false
+      },
+      "gitignore": false
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true,
+      "drupal/core-composer-scaffold": true
+    }
+  }
 }
