--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,17 +10,7 @@
   </testsuites>
 
   <php>
-    <!-- These variables may alternatively be set as environment variables. -->
-    <!-- Drupal major version to run tests over -->
-    <var name="UNISH_DRUPAL_MAJOR_VERSION" value="8"/>
-
-    <!--Uncomment and edit one of the lines below depending on DB platform.-->
     <!--DB User must have create/drop permissions-->
-    <var name="UNISH_DB_URL" value="mysql://root@localhost"/>
-    <!-- <var name="UNISH_DB_URL" value="pgsql://postgres:@localhost"/>-->
-    <!-- <var name="UNISH_DB_URL" value="sqlite://none/of/this/matters"/> -->
-
-    <!-- Uncomment to disable the total runtime and output timeouts for commands run through CommandUnishTestCase::execute().  -->
-    <env name="UNISH_NO_TIMEOUTS" value="y"/>
+    <var name="TEST_DB_URL" value="mysql://root@localhost/drupal"/>
   </php>
 </phpunit>
