--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "composer/installers": "^2.1",
     "drush/drush": "^11.0.5"
   },
