--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,9 @@ jobs:
       run: composer validate --strict
     - name: Install dependencies
       run: composer install --prefer-dist --no-scripts --no-suggest --no-interaction
+    - name: Install drupal
+      run: ./vendor/bin/drush site:install testing --root sut --db-url mysql://root@localhost/drupal --yes
+    - name: Run code sniffer
+      run: ./vendor/bin/phpcs --standard=PSR2 --ignore='sut,vendor' .
+    - name: Run unit tests
+      run: ./vendor/bin/phpunit
