--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "authors": [
     {
       "name": "Richard B. Porter",
-      "homepage": "https://richardbporter.github.io"
+      "homepage": "https://github.com/richardbporter"
     }
   ],
   "require": {
@@ -19,7 +19,9 @@
     "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3",
     "drupal/core-recommended": "^9.3",
-    "drupal/core-composer-scaffold": "^9.3"
+    "drupal/core-composer-scaffold": "^9.3",
+    "mglaman/drupal-check": "^1.4",
+    "symfony/phpunit-bridge": "^6.1"
   },
   "autoload-dev": {
     "psr-4": {
