Run drupal-check in CI and use Drupal PHPCS since we use Drupal APIs. (#67)
* Require mglaman/drupal-check, symfony/phpunit-bridge dev deps

* Ignore ds store

* Run drupal-check in CI

* Specify drupal-check dirs instead of excludes

* Fix Datetime case

* Remove incorrect @return doc

* Require dev drupal/coder

* Run drupal PHPCS on CI

* PHPCBF

* Implement Drupal coding standards

Co-authored-by: Richard B. Porter <rbp@richardbporter.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
     - name: Install drupal
       run: ./vendor/bin/drush site:install testing --root sut --db-url mysql://root:root@localhost/drupal --yes
     - name: Run code sniffer
-      run: ./vendor/bin/phpcs --standard=PSR2 --ignore='sut,vendor' .
+      run: ./vendor/bin/phpcs --standard=Drupal,DrupalPractice --ignore='sut,vendor' .
+    - name: Run drupal-check
+      run: ./vendor/bin/drupal-check UsersCommands.php tests/
     - name: Run unit tests
       run: ./vendor/bin/phpunit
