--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3",
-    "drupal/core-recommended": "^9.3",
-    "drupal/core-composer-scaffold": "^10.0",
+    "drupal/core-recommended": "^9.3 || ^10.0",
+    "drupal/core-composer-scaffold": "^9.3 || ^10.0",
     "mglaman/drupal-check": "^1.4",
     "symfony/phpunit-bridge": "^6.1",
     "drupal/coder": "^8.3"
