--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
   "require": {
     "php": ">=8.1",
     "composer/installers": "^2.1",
-    "drush/drush": "^11.0.5"
+    "drush/drush": "^12"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3",
-    "drupal/core-recommended": "^9.3 || ^10.0",
-    "drupal/core-composer-scaffold": "^9.3 || ^10.0",
+    "drupal/core-recommended": "^10.0",
+    "drupal/core-composer-scaffold": "^10.0",
     "mglaman/drupal-check": "^1.4",
     "symfony/phpunit-bridge": "^6.1",
     "drupal/coder": "^8.3"
@@ -32,7 +32,7 @@
   "extra": {
     "drush": {
       "services": {
-        "drush.services.yml": "^11.0.5"
+        "drush.services.yml": "^12"
       }
     },
     "installer-name": "UsersCommands",
