Exclude .devcontainer from git archive

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 /tests                  export-ignore
 /phpunit.xml.dist       export-ignore
 /.phpunit.result.cache  export-ignore
+/.devcontainer          export-ignore
