--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 /phpunit.xml.dist       export-ignore
 /.phpunit.result.cache  export-ignore
 /.devcontainer          export-ignore
+/phpstan.neon           export-ignore
