--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       run: ./vendor/bin/drush site:install testing --root sut --db-url mysql://root:root@localhost/drupal --yes
     - name: Run code sniffer
       run: ./vendor/bin/phpcs --standard=Drupal,DrupalPractice --ignore='sut,vendor' .
-    - name: Run drupal-check
-      run: ./vendor/bin/drupal-check UsersCommands.php tests/
+    - name: Run static analysis
+      run: ./vendor/bin/phpstan analyze UsersCommands.php tests/
     - name: Run unit tests
       run: ./vendor/bin/phpunit
