--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,9 @@
     "drush/drush": "^13.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3",
     "drupal/core-recommended": "^10.2",
     "drupal/core-composer-scaffold": "^10.2",
-    "mglaman/drupal-check": "^1.4",
-    "symfony/phpunit-bridge": "^7.0",
-    "drupal/coder": "^8.3"
+    "drupal/core-dev": "^10.2"
   },
   "autoload-dev": {
     "psr-4": {
@@ -58,7 +54,9 @@
     "allow-plugins": {
       "composer/installers": true,
       "drupal/core-composer-scaffold": true,
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "php-http/discovery": true,
+      "phpstan/extension-installer": true
     }
   }
 }
