--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": ">=8.1",
     "composer/installers": "^2.1",
-    "drush/drush": "^13.0"
+    "drush/drush": "^12.2 || ^13.0"
   },
   "require-dev": {
     "drupal/core-recommended": "^10.2",
