Setup PHP based on matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,11 @@ jobs:
         php: [8.2, 8.3]
     steps:
     - uses: actions/checkout@v4
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php }}
+        coverage: none
     - name: Start MySQL
       run: sudo /etc/init.d/mysql start
     - name: Validate composer.json
