--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "drush/drush": "^12.2 || ^13.0"
   },
   "require-dev": {
-    "drupal/core-recommended": "^10.2",
-    "drupal/core-composer-scaffold": "^11.0",
-    "drupal/core-dev": "^10.2"
+    "drupal/core-recommended": "^10.2 || ^11.0",
+    "drupal/core-composer-scaffold": "^10.2 || ^11.0",
+    "drupal/core-dev": "^10.2 || ^11.0"
   },
   "autoload-dev": {
     "psr-4": {
