Remove deprecated --no-suggest option in composer install CI step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Validate composer.json
       run: composer validate --strict
     - name: Install dependencies
-      run: composer install --prefer-dist --no-scripts --no-suggest --no-interaction
+      run: composer install --prefer-dist --no-scripts --no-interaction
     - name: Ignore PHPCS warnings
       run: ./vendor/bin/phpcs --config-set ignore_warnings_on_exit 1
     - name: Install drupal
